--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ h2 {
     transform: scale(-1);
 }
 
+#mac2 {
+    margin-top: 200px;
+}
+
 /* ------------ FINAL IMAGE -------------- */
 
 h3 {
